# NewTestEncoder

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
components/esp32_s3_lcd_ev_board/: CMakeLists.txt  Kconfig
components/esp32_s3_lcd_ev_board/include/bsp/: esp32_s3_lcd_ev_board.h  lcd.h
components/esp32_s3_lcd_ev_board/src/: bsp_sub_board.c  esp32_s3_lcd_ev_board.c  esp_lcd_ssd1963.c  st7701.c  st7701.h
components/esp_lvgl_port/: CMakeLists.txt
components/esp_lvgl_port/src/lvgl9/: esp_lvgl_port_disp.c
components/lvgl/: Kconfig
main/: CMakeLists.txt  main.c
main/counters/: count_test.c  count_test.h
main/dialog_screen/screen_YES_NO/: yes_no_screen.c  yes_no_screen.h
main/encoder/: encoder.c  encoder.h
main/lv_bg_color/: lv_bg_main_screen.c  lv_bg_main_screen.h
main/lv_fonts/: Roboto_bold_18.c  Roboto_bold_24.c  Roboto_bold_36.c  Roboto_bold_48.c
main/lv_image/: lv_im_NO.c  lv_im_OK.c  lv_im_all_in_out.c  lv_im_analog_out.c  lv_im_arrow_down.c  lv_im_arrow_left.c  lv_im_arrow_right.c  lv_im_arrow_up.c  lv_im_bubble_01.c  lv_im_bubble_02.c  lv_im_comfort.c  lv_im_controller.c  lv_im_day.c  lv_im_digital_out.c  lv_im_drop.c  lv_im_hand.c  lv_im_light_gray.c  lv_im_light_green.c  lv_im_light_red.c  lv_im_module_heat.c  lv_im_module_hotwater.c  lv_im_module_inout.c  lv_im_module_input_output.c  lv_im_module_lock.c  lv_im_module_off.c  lv_im_module_on.c  lv_im_module_podp.c  lv_im_night.c  lv_im_p_arrow_down.c  lv_im_p_arrow_up.c  lv_im_podp.c  lv_im_point_white.c  lv_im_point_yellow_change_x.c  lv_im_point_yellow_change_y.c  lv_im_point_yellow_x.c  lv_im_point_yellow_y.c  lv_im_pump_off.c  lv_im_pump_on.c  lv_im_radial_mask.c  lv_im_radius_gray.c  (+9 more)
main/menu_layer/main_menu/: main_menu.c  main_menu.h
main/my_widgets/: b_big.c  b_big.h  b_small.c  b_small.h  drop_label.c  drop_label.h  header.c  header.h  heat_exch.c  heat_exch.h  pump_off_img.c  pump_off_img.h  pump_on_img.c  pump_on_img.h  rad_mask.c  rad_mask.h  scale_img.c  scale_img.h  scale_marker_img.c  scale_marker_img.h  time_label.c  time_label.h  w_valve_off.c  w_valve_off.h  w_valve_on.c  w_valve_on.h
main/scale_logic_time/: time_scale.c  time_scale.h
main/screen_logic/: arc_menu.c  arc_menu.h
main/screens/S_Co/: screen_CO.c  screen_CO.h
main/screens/S_Heat/: screen_Heat.c  screen_Heat.h
main/screens/S_In_Out/: screen_In_Out.c  screen_In_Out.h
main/screens/S_Pass/: screen_Pass.c  screen_Pass.h
main/screens/S_Podp/: screen_Podp.c  screen_Podp.h
main/screens/S_Uv/: screen_Uv.c  screen_Uv.h
